--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,10 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
+    "rootDir": "./",
     "outDir": "./dist"
   },
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules"],
   "lib": ["es2015"]
 }
