--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
+    "add-build": "git add dist",
     "dev": "nodemon app.ts"
   },
   "keywords": [],
@@ -22,5 +23,8 @@
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
-  }
+  },
+  "pre-commit": [
+    "add-build"
+  ]
 }
