--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "bcryptjs": "^3.0.2",
+    "big-integer": "^1.6.52",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
