--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "big-integer": "^1.6.52",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
