--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "form-data": "^4.0.2",
-    "multer": "^1.4.5-lts.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
