--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@prisma/client": "^6.5.0",
     "@types/multer": "^1.4.12",
     "axios": "^1.8.4",
