--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,8 +9,18 @@
       }
     }
   ],
-
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
