--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,14 @@
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
@@ -49,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
